--- a/contact.html
+++ b/contact.html
@@ -1,32 +1,57 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Jessica Peters</title>
-	</head>
-<body>
-<header>
-	This will be the Header
-</header>		
-	
-	<div> 
 
-	<h1>Contact</h1>
-	<!-- This is where the contact form will go -->
+<head>
+    <title>About Me</title>
+        <link rel="stylesheet" type ="text/css" href="assets/css/reset.css">
 
-	</div>
-
-	<aside> 
-	<h2>Connect with Me</h2>
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/github_square_black-128.png" alt="Github">
-
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/linkedin_square_color-128.png" alt="LinkedIn">
-
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/stackoverflow.png" alt="Stack Overflow">
-
-</aside>
-
-<footer><p>&copy; 2017 Jessica Peters</p></footer>
-
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<header id="masthead">
+    <div class="container">
+        <a href="index.html" id="logo">Jessica Peters</a>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+</header>
+<div id="main-container" class="container">
+    <section class="main-section">
+        <h1>Contact</h1>
+        <form id="contact-form">
+            <ul>
+                <li>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" placeholder="John Smith" required="required">
+                </li>
+                <li>
+                    <label for="email">Email</label>
+                    <input type="text" name="email" id="email" placeholder="example@gmail.com" required="required">
+                </li>
+                <li>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" required="required"></textarea>
+                </li>
+            </ul>
+            <input type="submit" name="submit">
+        </form>
+    </section>
+    <section class="sidebar">
+        <div id="connect">
+            <h2>Connect with Me</h2>
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/github_square_black-128.png" class="social" alt="Github">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/linkedin_square_color-128.png" class="social" alt="LinkedIn">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/stackoverflow.png" class="social" alt="Stack Overflow">
+        </div>
+    </section>
+</div>
+<footer>
+    <div class="container">
+        &copy; Copyright 2017 Jessica Peters
+    </div>
+</footer>
 </body>
 
 </html>
