--- a/index.html
+++ b/index.html
@@ -1,45 +1,48 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title> Jessica Peters</title>
-	</head>
-<body>
-	<header>This will be the header</header>
-<nav> 
 
-<a href="#">About</a>  
-<a href="#">Portfolio</a>
-<a href="#">Contact</a>
+<head>
+    <title>About Me</title>
 
-	</nav>
+    
+    <link rel="stylesheet" type ="text/css" href="assets/css/reset.css">
 
-<section>
-		<h1>About Me</h1>
-	
-	<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/cats-q-c-640-480-5.jpeg" alt="Placeholder Cat">
-	<p>
-		Hello! My name is Jessica Peters. I will be adding my paragraph of text soon - need to finish something else first! Also will use this random bable to test out my text section! Woot!
-	</p>
-
-</section>
-
-<aside> 
-	<h2>Connect with Me</h2>
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/github_square_black-128.png" alt="Github">
-
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/linkedin_square_color-128.png" alt="LinkedIn">
-
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/stackoverflow.png" alt="Stack Overflow">
-
-</aside>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 
-<footer><p>&copy; 2017 Jessica Peters</p></footer>
-
-
-
-
-
+</head>
+<header id="masthead">
+    <div class="container">
+        <a href="index.html" id="logo">Jessica Peters</a>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+</header>
+<div id="main-container" class="container">
+    <section class="main-section">
+        <h1>About Me</h1>
+        <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/cats-q-c-640-480-5.jpeg" class="auth-image" alt="Profile Pic">
+        <p>Going to catch the red dot today going to catch the red dot today. Poop in the plant pot decide to want nothing to do with my owner today. Toy mouse squeak roll over purr, kitty! kitty!. Hide when guests come over shove bum in owner's face like camera lens. Meow loudly just to annoy owners favor packaging over toy for eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk then retire to the warmest spot on the couch to claw at the fabric before taking a catnap. </p>
+        <p>
+            Lick yarn hanging out of own butt behind the couch playing with balls of wool yet meow yet eat prawns daintily with a claw then lick paws clean wash down prawns with a lap of carnation milk then retire to the warmest spot on the couch to claw at the fabric before taking a catnap. Human is washing you why halp oh the horror flee scratch hiss bite.</p>
+    </section>
+    <section class="sidebar">
+        <div id="connect">
+            <h2>Connect with Me</h2>
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/github_square_black-128.png" class="social" alt="Github">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/linkedin_square_color-128.png" class="social" alt="LinkedIn">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/stackoverflow.png" class="social" alt="Stack Overflow">
+        </div>
+    </section>
+</div>
+<footer>
+    <div class="container">
+        &copy; Copyright 2017 Jessica Peters
+    </div>
+</footer>
 </body>
 
 </html>
