--- a/portfolio.html
+++ b/portfolio.html
@@ -1,46 +1,59 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Jessica Peters</title>
-	</head>
-<body>
-<header>
-	This will be the Header
-</header>		
-	<div> 
 
-	<h1>Portfolio</h1>
-	<!-- These are the portfolio section images -->
-
-	<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-1.jpeg" alt="Hangman">
-	<p>Hangman</p>
-
-	<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-2.jpeg" alt="RPG Game">
-	<p>RPG Game</p>
-
-	<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-5.jpeg" alt="Trivia Game">
-	<p>Trivia</p>
-
-	<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-7.jpeg" alt="Rutgers Info Widget">
-	<p>Rutgers Info Widget</p>
-
-	<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-9.jpeg" alt="Rock Paper Scissors">
-	<p>Rock Paper Scissors</p>
-
-	</div>
-
-	<aside> 
-	<h2>Connect with Me</h2>
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/github_square_black-128.png" alt="Github">
-
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/linkedin_square_color-128.png" alt="LinkedIn">
-
-<img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/stackoverflow.png" alt="Stack Overflow">
-
-</aside>
-
-<footer><p>&copy; 2017 Jessica Peters</p></footer>
-
+<head>
+    <title>About Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+<header id="masthead">
+    <div class="container">
+        <a href="index.html" id="logo">Jessica Peters</a>
+        <nav>
+            <a href="index.html">About</a>
+            <a href="portfolio.html">Portfolio</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </div>
+</header>
+<div id="main-container" class="container">
+    <section class="main-section">
+        <h1>Portfolio</h1>
+        <div class="work">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-1.jpeg" class="auth-image" alt="hangman">
+            <h3>Hangman</h3>
+        </div>
+        <div class="work">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-2.jpeg" class="auth-image" alt="RPG Game">
+            <h3>RPG Game</h3>
+        </div>
+        <div class="work">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-5.jpeg" class="auth-image" alt="Trivia Game">
+            <h3>Trivia Game</h3>
+        </div>
+        <div class="work">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-7.jpeg" class="auth-image" alt="Rutgers Info Widget">
+            <h3>Rutgers Info Widget</h3>
+        </div>
+        <div class="work">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/technics-q-c-640-480-9.jpeg" class="auth-image" alt="rock paper scissors">
+            <h3>Rock Paper Scissors</h3>
+        </div>
+    </section>
+    <section class="sidebar">
+        <div id="connect">
+            <h2>Connect with Me</h2>
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/github_square_black-128.png" class="social" alt="Github">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/linkedin_square_color-128.png" class="social" alt="LinkedIn">
+            <img src="file:///Users/jessicapeters/Desktop/Basic-Portfolio/assets/images/stackoverflow.png" class="social" alt="Stack Overflow">
+        </div>
+    </section>
+</div>
+<footer>
+    <div class="container">
+        &copy; Copyright 2017 Jessica Peters
+    </div>
+</footer>
 </body>
 
 </html>
